# awscdk-python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  cdk.json  examples.toml  pyp.toml  pyproject.toml  ruff.toml
aws/: ec2.py
ias/: simple_cdk.py
tests/ias/: test_simple_cdk.py
